--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -12,7 +13,7 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#">Studio</a></li>
+          <li><a href="./index.html">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
@@ -32,7 +33,7 @@
 
     <main>
       <section>
-        <h1 hidden>Our projects</h1>
+        <h1 class="main-title" hidden>Our projects</h1>
         <ul>
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
@@ -44,52 +45,112 @@
       <section>
         <ul>
           <li>
-            <img src="./images/port-1.jpg" alt="App interface" />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <a href="">
+              <img
+                src="./images/port-1.jpg"
+                alt="App interface"
+                width="360"
+                height="300"
+              />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-2.jpg" alt="Cashless payment" />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/port-2.jpg"
+                alt="Cashless payment"
+                width="360"
+                height="300"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-3.jpg" alt="Telephone and computer App" />
-            <h2>Meditation App</h2>
-            <p>App</p>
+            <a href="">
+              <img
+                src="./images/port-3.jpg"
+                alt="Telephone and computer App"
+                width="360"
+                height="300"
+              />
+              <h2>Meditation App</h2>
+              <p>App</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-4.jpg" alt="Inside car" />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/port-4.jpg"
+                alt="Inside car"
+                width="360"
+                height="300"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/port-5.jpg"
-              alt="Walpapers and themes for desktop"
-            />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+            <a href="">
+              <img
+                src="./images/port-5.jpg"
+                alt="Walpapers and themes for desktop"
+                width="360"
+                height="300"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-6.jpg" alt="Girl with telephone" />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <a href="">
+              <img
+                src="./images/port-6.jpg"
+                alt="Girl with telephone"
+                width="360"
+                height="300"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-7.jpg" alt="Designs for stories" />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <a href="">
+              <img
+                src="./images/port-7.jpg"
+                alt="Designs for stories"
+                width="360"
+                height="300"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-8.jpg" alt="Girl with shopper" />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <a href="">
+              <img
+                src="./images/port-8.jpg"
+                alt="Girl with shopper"
+                width="360"
+                height="300"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </a>
           </li>
           <li>
-            <img src="./images/port-9.jpg" alt="Cup of coffee" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <a href="">
+              <img
+                src="./images/port-9.jpg"
+                alt="Cup of coffee"
+                width="360"
+                height="300"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
