--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <address>
         <ul class="navigation">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="address"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -59,29 +59,29 @@
         <h2 hidden>advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-item">Strategy</h3>
+            <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-item">Punctuality</h3>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-item">Diligence</h3>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-item">Technologies</h3>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -90,7 +90,7 @@
       </section>
 
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -120,7 +120,7 @@
       </section>
 
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -128,13 +128,13 @@
               alt="Mark Guerrero`s photo"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-item">Product Designer</p>
           </li>
           <li>
             <img src="./images/team-2.jpg" alt="Tom Ford`s photo" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-item">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -142,8 +142,8 @@
               alt="Camila Garcia`s photo"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-item">Marketing</p>
           </li>
           <li>
             <img
@@ -151,16 +151,16 @@
               alt="Daniel Wilson`s photo"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-item">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
