--- a/portfolio.html
+++ b/portfolio.html
@@ -4,28 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./style/styles.css" />
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <ul class="navigation">
+          <li>
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          </li>
+          <li><a href="#" class="link">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="#" class="link">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
+        <ul class="navigation">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -33,19 +50,19 @@
 
     <main>
       <section>
-        <h1 class="main-title" hidden>Our projects</h1>
+        <h1 class="page-title" hidden>Our projects</h1>
         <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button type="button" class="button">All</button></li>
+          <li><button type="button" class="button">Web Site</button></li>
+          <li><button type="button" class="button">App</button></li>
+          <li><button type="button" class="button">Design</button></li>
+          <li><button type="button" class="button">Marketing</button></li>
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-1.jpg"
                 alt="App interface"
@@ -57,7 +74,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-2.jpg"
                 alt="Cashless payment"
@@ -69,7 +86,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-3.jpg"
                 alt="Telephone and computer App"
@@ -81,7 +98,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-4.jpg"
                 alt="Inside car"
@@ -93,7 +110,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-5.jpg"
                 alt="Walpapers and themes for desktop"
@@ -105,7 +122,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-6.jpg"
                 alt="Girl with telephone"
@@ -117,7 +134,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-7.jpg"
                 alt="Designs for stories"
@@ -129,7 +146,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-8.jpg"
                 alt="Girl with shopper"
@@ -141,7 +158,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="list-item">
               <img
                 src="./images/port-9.jpg"
                 alt="Cup of coffee"
@@ -155,9 +172,9 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
