--- a/index.html
+++ b/index.html
@@ -23,65 +23,71 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="header">
       <nav>
-        <ul class="navigation">
+        <ul>
           <li>
-            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+            <a href="./index.html" class="header-logo"
+              ><span>Web</span>Studio</a
+            >
           </li>
-          <li><a href="#" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="#" class="link">Contacts</a></li>
+          <li><a class="header-menu-link" href="#">Studio</a></li>
+          <li>
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="header-menu-link" href="#">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul class="navigation">
+      <address class="header-address">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address"
+            <a href="mailto:info@devstudio.com" class="header-address-item"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="header-address-item"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
 
-      <section>
-        <h2 hidden>advantages</h2>
-        <ul>
-          <li>
-            <h3 class="section-item">Strategy</h3>
-            <p class="section-text">
+      <section class="benefits">
+        <h2 hidden>Benefits</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Strategy</h3>
+            <p class="benefits-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3 class="section-item">Punctuality</h3>
-            <p class="section-text">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Punctuality</h3>
+            <p class="benefits-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3 class="section-item">Diligence</h3>
-            <p class="section-text">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Diligence</h3>
+            <p class="benefits-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3 class="section-item">Technologies</h3>
-            <p class="section-text">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Technologies</h3>
+            <p class="benefits-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -89,8 +95,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2 class="section-title">What are we doing</h2>
+      <section class="works">
+        <h2 class="works-title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -119,47 +125,47 @@
         </ul>
       </section>
 
-      <section>
-        <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/team-1.jpg"
               alt="Mark Guerrero`s photo"
               width="264"
             />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-item">Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team-2.jpg" alt="Tom Ford`s photo" width="264" />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-item">Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team-3.jpg"
               alt="Camila Garcia`s photo"
               width="264"
             />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-item">Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team-4.jpg"
               alt="Daniel Wilson`s photo"
               width="264"
             />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-item">UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
