--- a/portfolio.html
+++ b/portfolio.html
@@ -22,27 +22,33 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header>
       <nav>
-        <ul class="navigation">
+        <ul>
           <li>
-            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+            <a href="./index.html" class="header-logo"
+              ><span>Web</span>Studio</a
+            >
           </li>
-          <li><a href="#" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="#" class="link">Contacts</a></li>
+          <li><a class="header-menu-link" href="#">Studio</a></li>
+          <li>
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="header-menu-link" href="#">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul class="navigation">
+      <address class="header-address">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="address"
+            <a href="mailto:info@devstudio.com" class="header-address-item"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="header-address-item"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -50,19 +56,19 @@
 
     <main>
       <section>
-        <h1 class="page-title" hidden>Our projects</h1>
+        <h1hidden>Our projects</h1hidden>
         <ul>
-          <li><button type="button" class="button">All</button></li>
-          <li><button type="button" class="button">Web Site</button></li>
-          <li><button type="button" class="button">App</button></li>
-          <li><button type="button" class="button">Design</button></li>
-          <li><button type="button" class="button">Marketing</button></li>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
         </ul>
       </section>
       <section>
-        <ul class="list">
+        <ul>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-1.jpg"
                 alt="App interface"
@@ -74,7 +80,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-2.jpg"
                 alt="Cashless payment"
@@ -86,7 +92,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-3.jpg"
                 alt="Telephone and computer App"
@@ -98,7 +104,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-4.jpg"
                 alt="Inside car"
@@ -110,7 +116,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-5.jpg"
                 alt="Walpapers and themes for desktop"
@@ -122,7 +128,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-6.jpg"
                 alt="Girl with telephone"
@@ -134,7 +140,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-7.jpg"
                 alt="Designs for stories"
@@ -146,7 +152,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-8.jpg"
                 alt="Girl with shopper"
@@ -158,7 +164,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="list-item">
+            <a href="">
               <img
                 src="./images/port-9.jpg"
                 alt="Cup of coffee"
@@ -172,8 +178,9 @@
         </ul>
       </section>
     </main>
+
     <footer class="footer">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
