--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <title>Portfolio WebStudio</title>
     <link
       rel="stylesheet"
@@ -55,19 +56,30 @@
     </header>
 
     <main>
-      <section>
-        <h1hidden>Our projects</h1hidden>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <section class="portfolio">
+        <h1 hidden>Our projects</h1>
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
+            <button type="button" class="portfolio-button">All</button>
+          </li>
+          <li class="portfolio-list-item">
+            <button type="button" class="portfolio-button">Web Site</button>
+          </li>
+          <li class="portfolio-list-item">
+            <button type="button" class="portfolio-button">App</button>
+          </li>
+          <li class="portfolio-list-item">
+            <button type="button" class="portfolio-button">Design</button>
+          </li>
+          <li class="portfolio-list-item">
+            <button type="button" class="portfolio-button">Marketing</button>
+          </li>
         </ul>
       </section>
-      <section>
-        <ul>
-          <li>
+
+      <section class="projects">
+        <ul class="projects-list">
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-1.jpg"
@@ -75,11 +87,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="projects-list-title">Banking App Interface Concept</h2>
+              <p class="projects-list-text">App</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-2.jpg"
@@ -87,11 +99,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="projects-list-title">Cashless Payment</h2>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-3.jpg"
@@ -99,11 +111,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="projects-list-title">Meditation App</h2>
+              <p class="projects-list-text">App</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-4.jpg"
@@ -111,11 +123,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="projects-list-title">Taxi Service</h2>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-5.jpg"
@@ -123,11 +135,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="projects-list-title">Screen Illustrations</h2>
+              <p class="projects-list-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-6.jpg"
@@ -135,11 +147,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="projects-list-title">Online Courses</h2>
+              <p class="projects-list-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-7.jpg"
@@ -147,11 +159,11 @@
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="projects-list-title">Instagram Stories Concept</h2>
+              <p class="projects-list-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="projects-list-item">
             <a href="">
               <img
                 src="./images/port-8.jpg"
@@ -159,8 +171,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="projects-list-title">Organic Food</h2>
+              <p class="projects-list-text">Web Site</p>
             </a>
           </li>
           <li>
@@ -171,8 +183,8 @@
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="projects-list-title">Fresh Coffee</h2>
+              <p class="projects-list-text">Web Site</p>
             </a>
           </li>
         </ul>
