--- a/index.html
+++ b/index.html
@@ -19,35 +19,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header">
-      <nav>
-        <ul>
+      <nav class="header-list">
+        <li>
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="header-logo-span">Studio</span></a
+          >
+        </li>
+        <ul class="header-menu list">
           <li>
-            <a href="./index.html" class="header-logo"
-              ><span>Web</span>Studio</a
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="header-menu-link link" href="./portfolio.html"
+              >Portfolio</a
             >
           </li>
-          <li><a class="header-menu-link" href="#">Studio</a></li>
-          <li>
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="header-menu-link" href="#">Contacts</a></li>
+          <li><a class="header-menu-link link" href="#">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="header-address">
-        <ul>
+        <ul class="header-address-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address-item"
+            <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-address-item"
+            <a href="tel:+110001111111" class="header-address-item link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -63,7 +67,7 @@
 
       <section class="benefits">
         <h2 hidden>Benefits</h2>
-        <ul class="benefits-list">
+        <ul class="benefits-list list">
           <li class="benefits-item">
             <h3 class="benefits-subtitle">Strategy</h3>
             <p class="benefits-item-text">
@@ -97,7 +101,7 @@
 
       <section class="works">
         <h2 class="works-title">What are we doing</h2>
-        <ul>
+        <ul class="works-list list">
           <li>
             <img
               src="./images/img-1.jpg"
@@ -127,7 +131,7 @@
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               src="./images/team-1.jpg"
@@ -165,7 +169,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo link"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
