--- a/portfolio.html
+++ b/portfolio.html
@@ -19,35 +19,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
+    <header class="header">
+      <nav class="header-list">
+        <li>
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="header-logo-span">Studio</span></a
+          >
+        </li>
+        <ul class="header-menu list">
           <li>
-            <a href="./index.html" class="header-logo"
-              ><span>Web</span>Studio</a
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="header-menu-link link" href="./portfolio.html"
+              >Portfolio</a
             >
           </li>
-          <li><a class="header-menu-link" href="#">Studio</a></li>
-          <li>
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="header-menu-link" href="#">Contacts</a></li>
+          <li><a class="header-menu-link link" href="#">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="header-address">
-        <ul>
+        <ul class="header-address-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="header-address-item"
+            <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="header-address-item"
+            <a href="tel:+110001111111" class="header-address-item link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,7 +62,8 @@
     <main>
       <section class="portfolio">
         <h1 hidden>Our projects</h1>
-        <ul class="portfolio-list">
+
+        <ul class="portfolio-list list">
           <li class="portfolio-list-item">
             <button type="button" class="portfolio-button">All</button>
           </li>
@@ -75,116 +80,114 @@
             <button type="button" class="portfolio-button">Marketing</button>
           </li>
         </ul>
-      </section>
 
-      <section class="projects">
-        <ul class="projects-list">
-          <li class="projects-list-item">
-            <a href="">
+        <ul class="projects list">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-1.jpg"
                 alt="App interface"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Banking App Interface Concept</h2>
-              <p class="projects-list-text">App</p>
+              <h2 class="projects-title">Banking App Interface Concept</h2>
+              <p class="projects-text">App</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-2.jpg"
                 alt="Cashless payment"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Cashless Payment</h2>
-              <p class="projects-list-text">Marketing</p>
+              <h2 class="projects-title">Cashless Payment</h2>
+              <p class="projects-text">Marketing</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-3.jpg"
                 alt="Telephone and computer App"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Meditation App</h2>
-              <p class="projects-list-text">App</p>
+              <h2 class="projects-title">Meditation App</h2>
+              <p class="projects-text">App</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-4.jpg"
                 alt="Inside car"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Taxi Service</h2>
-              <p class="projects-list-text">Marketing</p>
+              <h2 class="projects-title">Taxi Service</h2>
+              <p class="projects-text">Marketing</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-5.jpg"
                 alt="Walpapers and themes for desktop"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Screen Illustrations</h2>
-              <p class="projects-list-text">Design</p>
+              <h2 class="projects-title">Screen Illustrations</h2>
+              <p class="projects-text">Design</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-6.jpg"
                 alt="Girl with telephone"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Online Courses</h2>
-              <p class="projects-list-text">Marketing</p>
+              <h2 class="projects-title">Online Courses</h2>
+              <p class="projects-text">Marketing</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-7.jpg"
                 alt="Designs for stories"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Instagram Stories Concept</h2>
-              <p class="projects-list-text">Design</p>
+              <h2 class="projects-title">Instagram Stories Concept</h2>
+              <p class="projects-text">Design</p>
             </a>
           </li>
-          <li class="projects-list-item">
-            <a href="">
+          <li class="projects-item">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-8.jpg"
                 alt="Girl with shopper"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Organic Food</h2>
-              <p class="projects-list-text">Web Site</p>
+              <h2 class="projects-title">Organic Food</h2>
+              <p class="projects-text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="projects-link link">
               <img
                 src="./images/port-9.jpg"
                 alt="Cup of coffee"
                 width="360"
                 height="300"
               />
-              <h2 class="projects-list-title">Fresh Coffee</h2>
-              <p class="projects-list-text">Web Site</p>
+              <h2 class="projects-title">Fresh Coffee</h2>
+              <p class="projects-text">Web Site</p>
             </a>
           </li>
         </ul>
@@ -192,7 +195,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo link"
+        >Web<span class="footer-logo-span">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
