--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,12 @@
 
   <body>
     <header class="header">
-      <nav class="header-list">
-        <li>
-          <a href="./index.html" class="header-logo link"
-            >Web<span class="header-logo-span">Studio</span></a
-          >
-        </li>
-        <ul class="header-menu list">
+      <nav class="header-list">       
+            <a href="./index.html" class="header-logo link"
+              >Web<span class="header-logo-span">Studio</span></a
+            >
+          <ul class="header-menu list"></ul>
+
           <li>
             <a class="header-menu-link link" href="./index.html">Studio</a>
           </li>
@@ -39,12 +38,12 @@
               >Portfolio</a
             >
           </li>
-          <li><a class="header-menu-link link" href="#">Contacts</a></li>
+          <li><a class="header-menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="header-address">
-        <ul class="header-address-list">
+        <ul class="header-address-list list">
           <li>
             <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
