--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
 
   <body>
     <header class="header">
-      <nav class="header-list">       
-            <a href="./index.html" class="header-logo link"
-              >Web<span class="header-logo-span">Studio</span></a
-            >
-          <ul class="header-menu list"></ul>
-          <li class="header-menu-item link">
-            <a class="header-menu-link" href="./index.html">Studio</a>
+      <nav class="header-list">
+        <a href="./index.html" class="header-logo link"
+          >Web<span class="header-logo-span">Studio</span></a
+        >
+        <ul class="header-menu list">
+          <li>
+            <a href="./index.html" class="header-menu-link link">Studio</a>
           </li>
-          <li  class="header-menu-item link">
-            <a class="header-menu-link" href="./portfolio.html"
+          <li>
+            <a href="./portfolio.html" class="header-menu-link link"
               >Portfolio</a
             >
           </li>
-          <li  class="header-menu-item link"><a class="header-menu-link" href="">Contacts</a></li>
+          <li>
+            <a href="" class="header-menu-link link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address class="header-address">
         <ul class="header-address-list list">
-          <li  class="header-menu-item link">
+          <li class="header-menu-item link">
             <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
             >
